; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p.c_p2p_set_intended_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p.c_p2p_set_intended_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p2p_data = type { i32 }

@ETH_ALEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @p2p_set_intended_addr(%struct.p2p_data* %0, i32* %1) #0 {
  %3 = alloca %struct.p2p_data*, align 8
  %4 = alloca i32*, align 8
  store %struct.p2p_data* %0, %struct.p2p_data** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.p2p_data*, %struct.p2p_data** %3, align 8
  %6 = icmp ne %struct.p2p_data* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %7
  %11 = load %struct.p2p_data*, %struct.p2p_data** %3, align 8
  %12 = getelementptr inbounds %struct.p2p_data, %struct.p2p_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @ETH_ALEN, align 4
  %16 = call i32 @os_memcpy(i32 %13, i32* %14, i32 %15)
  br label %17

17:                                               ; preds = %10, %7, %2
  ret void
}

declare dso_local i32 @os_memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
